--- a/libbuddy/src/App.css
+++ b/libbuddy/src/App.css
@@ -98,3 +98,26 @@ body {
 .nav-links a:hover {
   color: #61dafb;
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  height: 500px;
+  width: 400px;
+  padding: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 10;
+}
+.entry-form {
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 20px;
+  width: 250px;
+  background: transparent;
+}
