--- a/libbuddy/src/book-page.css
+++ b/libbuddy/src/book-page.css
@@ -28,3 +28,25 @@ body,html {
   width: 800px;
   text-align: left;
 }
+.book-tags {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px; /* space between buttons */
+}
+.book-tags li {
+  margin: 0;
+}
+.book-tags button {
+  padding: 6px 12px;
+  border: none;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.book-tags button:hover {
+  background-color: #357abd;
+}
