--- a/libbuddy/src/App.css
+++ b/libbuddy/src/App.css
@@ -1,17 +1,11 @@
-body {
+/* body {
   background-color: #f8e5c3;
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-}
+} */
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 .video-container {
   position: fixed;
   top: 0;
@@ -59,77 +53,3 @@ body {
   margin-left: 10px;
 }
 
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  background: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  z-index: 5;
-}
-.logo {
-  font-size: 1.5rem;
-  color: white;
-  font-weight: bold;
-  margin-right: 20px;
-}
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-  padding: 0;
-  margin: 0;
-}
-.nav-links li {
-  display: inline-block;
-}
-.nav-links a {
-  text-decoration: none;
-  color: white;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-}
-.nav-links a:hover {
-  color: #61dafb;
-}
-
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  height: 500px;
-  width: 400px;
-  padding: 20px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  z-index: 10;
-}
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-.close-btn:hover {
-  color: red;
-}
-.entry-form {
-  border: none;
-  outline: none;
-  padding: 10px;
-  font-size: 1rem;
-  border-radius: 20px;
-  width: 250px;
-  background: transparent;
-}
