--- a/libbuddy/src/author-page.css
+++ b/libbuddy/src/author-page.css
@@ -1,23 +1,14 @@
-#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-}
-
 .author-page {
-    top: 40%;
-    left: 20%;
-    transform: translate(-100%, -20%);
-    height: 500px;
-    width: 400px;
-    padding: 20px;
-    z-index: 10;
-    text-align: left;
+  max-width: 1024px;
+  margin: 100px auto 40px auto;
+  padding: 2rem;
+  text-align: left;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 }
 .bio {
-    height: 200px;
-    width: 800px;
-    text-align: left;
-    font-size: 10px;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  line-height: 1.6;
 }
