--- a/libbuddy/src/book-page.css
+++ b/libbuddy/src/book-page.css
@@ -1,27 +1,7 @@
-body,html {
-  background-color: #f8e5c3;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  overflow-y: auto;
-}
-  
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .book-page {
-  top: 40%;
-  left: 20%;
-  transform: translate(-100%, -20%);
-  height: 500px;
-  width: 400px;
-  padding: 20px;
-  z-index: 10;
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 2rem;
   text-align: left;
 }
 .description {
