--- a/libbuddy/src/NavBar.css
+++ b/libbuddy/src/NavBar.css
@@ -15,11 +15,15 @@
 }
 
 body {
-    background-color: #ffffff;
+    /* background-color: #a0a0a0;
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100%;
+    width: 100%; */
+    background-image: url('/wood-5.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 #root {
