--- a/libbuddy/src/App.css
+++ b/libbuddy/src/App.css
@@ -5,23 +5,24 @@
   height: 100%;
   width: 100%;
 } */
-
+html, body {
+  overflow-x: clip;
+}
+.clip-diagonal {
+  clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%);
+}
 .video-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 45vh;
   overflow: hidden;
   z-index: 1;
 }
 .background-video {
-  position: absolute;
-  top: 15%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100vw;
-  height: 60vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   z-index: 1;
 }
